--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>פרויקט מסדי נתונים – ספרייה</title>
 
-  <!-- אם יש לך style.css, תשאירי את זה. אם לא - זה עדיין יעבוד כי יש עיצוב גם כאן -->
+  <!-- אם יש לך style.css, זה לא חובה – אבל לא מפריע -->
   <link rel="stylesheet" href="style.css" />
 
   <style>
     :root{
-      --glass: rgba(14, 18, 28, .62);
-      --glass2: rgba(14, 18, 28, .48);
+      --glass: rgba(18, 24, 40, .62);
+      --glass2: rgba(18, 24, 40, .45);
       --border: rgba(255,255,255,.14);
       --text: rgba(255,255,255,.92);
       --muted: rgba(255,255,255,.72);
@@ -20,14 +20,14 @@
     }
 
     *{ box-sizing: border-box; }
-    html, body{ height: 100%; }
+    html, body { height: 100%; }
     body{
       margin:0;
       color: var(--text);
       font-family: system-ui, -apple-system, "Segoe UI", Arial;
       background:
-        linear-gradient(rgba(8,10,18,.72), rgba(8,10,18,.86)),
-        url("bg-book.jpg");
+        linear-gradient(rgba(8,10,18,.78), rgba(8,10,18,.90)),
+        url("bg-book.jpg.jpeg");
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -36,165 +36,159 @@
     .wrap{
       max-width: 1100px;
       margin: 0 auto;
-      padding: 28px 16px 50px;
+      padding: 28px 16px 40px;
     }
 
     header{
-      display:flex;
-      flex-direction: column;
-      gap: 10px;
-      align-items: center;
-      text-align:center;
-      margin ✓
-      margin-top: 10px;
+      text-align: center;
+      margin-bottom: 18px;
     }
 
-    .title{
-      font-size: clamp(28px, 3.2vw, 44px);
-      font-weight: 800;
+    h1{
+      margin: 6px 0 10px;
+      font-size: 34px;
       letter-spacing: .5px;
-      margin: 0;
       text-shadow: 0 10px 30px rgba(0,0,0,.55);
     }
 
-    .pill-row{
+    .chips{
       display:flex;
-      gap: 10px;
+      justify-content:center;
+      gap:10px;
       flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 6px;
+      margin-bottom: 10px;
     }
 
-    .pill{
-      display:inline-flex;
-      gap: 8px;
-      align-items:center;
-      padding: 8px 12px;
-      border-radius: 999px;
+    .chip{
       background: rgba(255,255,255,.08);
       border: 1px solid var(--border);
+      padding: 8px 12px;
+      border-radius: 999px;
       backdrop-filter: blur(10px);
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .grid{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
+      margin-top: 14px;
+    }
+
+    @media (max-width: 900px){
+      .grid{ grid-template-columns: 1fr; }
+    }
+
+    .card{
+      background: linear-gradient(180deg, var(--glass), var(--glass2));
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 16px;
+      backdrop-filter: blur(12px);
+    }
+
+    .card h2{
+      margin: 0 0 10px;
+      font-size: 18px;
+      color: var(--text);
+    }
+
+    .muted{ color: var(--muted); }
+    .small{ font-size: 14px; line-height: 1.55; }
+
+    .actions{
+      display:flex;
+      gap:10px;
+      flex-wrap: wrap;
+      margin-top: 12px;
+    }
+
+    button{
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.10);
+      color: var(--text);
+      padding: 10px 14px;
+      border-radius: 12px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: transform .08s ease, background .15s ease;
+    }
+    button:hover{ background: rgba(255,255,255,.14); }
+    button:active{ transform: scale(.98); }
+
+    .controls{
+      display:flex;
+      gap:10px;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-top: 8px;
+    }
+
+    input, select{
+      border: 1px solid var(--border);
+      background: rgba(0,0,0,.22);
+      color: var(--text);
+      padding: 10px 12px;
+      border-radius: 12px;
+      outline: none;
+      min-width: 220px;
+    }
+    select{ min-width: 160px; }
+
+    .status{
+      margin-top: 10px;
       color: var(--muted);
       font-size: 13px;
     }
 
-    .grid{
-      margin-top: 22px;
-      display:grid;
-      grid-template-columns: 1fr;
-      gap: 14px;
-    }
-
-    @media (min-width: 900px){
-      .grid{ grid-template-columns: 1.2fr .8fr; }
-    }
-
-    .card{
-      background: var(--glass);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(14px);
-      padding: 18px;
-    }
-
-    .card h2{
-      margin:0 0 10px;
-      font-size: 18px;
-      letter-spacing: .2px;
-    }
-
-    .muted{ color: var(--muted); }
-
-    .actions{
-      display:flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      margin-top: 10px;
-    }
-
-    button{
-      cursor:pointer;
-      border: 1px solid var(--border);
-      background: rgba(255,255,255,.10);
-      color: var(--text);
-      border-radius: 999px;
-      padding: 10px 14px;
-      font-weight: 700;
-      transition: transform .12s ease, background .12s ease;
-    }
-    button:hover{ transform: translateY(-1px); background: rgba(255,255,255,.14); }
-    button:active{ transform: translateY(0px); }
-
-    .btn-primary{
-      background: rgba(78, 161, 255, .18);
-      border-color: rgba(78, 161, 255, .28);
-    }
-
-    .row{
-      display:flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      align-items: center;
-      margin-top: 10px;
-    }
-
-    input, select{
-      border-radius: 12px;
-      border: 1px solid var(--border);
-      background: rgba(0,0,0,.18);
-      color: var(--text);
-      padding: 10px 12px;
-      outline:none;
-      min-width: 220px;
-    }
-    select{ min-width: 180px; }
-
-    .status{
-      margin-top: 10px;
-      font-size: 14px;
-      color: var(--muted);
-    }
-
     table{
-      width:100%;
+      width: 100%;
       border-collapse: collapse;
       overflow: hidden;
       border-radius: 14px;
-      border: 1px solid var(--border);
-      background: rgba(0,0,0,.18);
+      border: 1px solid rgba(255,255,255,.10);
+      margin-top: 10px;
     }
-    th, td{
-      padding: 10px 10px;
+
+    thead th{
+      background: rgba(255,255,255,.08);
+      color: var(--muted);
+      font-size: 13px;
       text-align: right;
+      padding: 10px 12px;
+      border-bottom: 1px solid rgba(255,255,255,.10);
+      white-space: nowrap;
+    }
+
+    tbody td{
+      padding: 10px 12px;
       border-bottom: 1px solid rgba(255,255,255,.08);
       font-size: 14px;
     }
-    th{ color: rgba(255,255,255,.85); font-weight: 800; }
-    tr:hover td{ background: rgba(255,255,255,.04); }
 
-    footer{
+    tbody tr:hover{
+      background: rgba(255,255,255,.05);
+    }
+
+    .footer{
       text-align:center;
       margin-top: 18px;
       color: rgba(255,255,255,.65);
       font-size: 13px;
+      text-shadow: 0 8px 24px rgba(0,0,0,.55);
     }
 
-    .small-note{
-      margin-top: 6px;
-      font-size: 13px;
-      color: rgba(255,255,255,.68);
-      line-height: 1.45;
-    }
-
-    .kbd{
+    .pill{
       display:inline-block;
       padding: 2px 8px;
-      border-radius: 8px;
-      border: 1px solid rgba(255,255,255,.18);
-      background: rgba(255,255,255,.06);
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.07);
+      color: rgba(255,255,255,.85);
       font-size: 12px;
-      color: rgba(255,255,255,.78);
+      margin-inline: 4px;
     }
   </style>
 </head>
@@ -202,190 +196,183 @@
 <body>
   <div class="wrap">
     <header>
-      <h1 class="title">פרויקט מסדי נתונים – ספרייה</h1>
-
-      <div class="pill-row">
-        <span class="pill">מסד נתונים: <strong style="color:var(--text)">final_project</strong></span>
-        <span class="pill">משתתפות: <strong style="color:var(--text)">שירה, הודיה</strong></span>
+      <h1>פרויקט מסדי נתונים – ספרייה</h1>
+      <div class="chips">
+        <div class="chip">מסד נתונים: <span class="pill">final_project</span></div>
+        <div class="chip">משתתפות: <span class="pill">שירה</span> <span class="pill">הודיה</span></div>
       </div>
     </header>
 
     <div class="grid">
-      <!-- כרטיס הסבר על השאלה -->
       <section class="card">
         <h2>המטרה (שאלה 7)</h2>
-        <div class="small-note">
-          ליצור קישור/דף אינטרנט שמציג את שם מסד הנתונים ואת שמות המשתתפות.
-          בנוסף, יש כפתור <strong>“רשימת ספרים”</strong> שמציג רשימה של ספרים
-          עם הפרטים הידועים עליהם. שינוי במסד הנתונים יגרור שינוי ברשימה המוצגת
-          (אצלנו זה מדומה ע״י קובץ <span class="kbd">books.json</span> שמכיל את נתוני הספרים).
+        <div class="small muted">
+          ליצור קישור/דף אינטרנט שמציג את שם מסד הנתונים ושמות המשתתפות בתרגיל.  
+          בנוסף, יש כפתור <b>“רשימת ספרים”</b> שמציג רשימה של ספרים עם כל הפרטים הידועים עליהם.  
+          שינוי במסד הנתונים יגרור שינוי ברשימה שמוצגת (כאן אנחנו מדמים זאת עם <span class="pill">books.json</span>).
         </div>
 
         <div class="actions">
-          <button id="loadBtn" class="btn-primary">רשימת ספרים</button>
+          <button id="loadBtn">רשימת ספרים</button>
+          <button id="refreshBtn">רענון</button>
           <button id="clearBtn">ניקוי</button>
         </div>
 
         <div class="status" id="statusEl">לחצי “רשימת ספרים” כדי לטעון נתונים.</div>
       </section>
 
-      <!-- כרטיס מסוננים -->
-      <aside class="card">
+      <section class="card">
         <h2>חיפוש ומיון</h2>
-
-        <div class="row">
+        <div class="controls">
           <input id="searchEl" type="text" placeholder="חיפוש לפי שם ספר / מזהה..." />
           <select id="sortEl">
             <option value="id_asc">מיון: מזהה עולה</option>
             <option value="id_desc">מיון: מזהה יורד</option>
-            <option value="title_asc">מיון: שם A→Z</option>
-            <option value="title_desc">מיון: שם Z→A</option>
-            <option value="pages_desc">מיון: עמודים ↓</option>
-            <option value="price_desc">מיון: מחיר ↓</option>
+            <option value="title_asc">מיון: שם עולה</option>
+            <option value="title_desc">מיון: שם יורד</option>
           </select>
         </div>
-
-        <div class="small-note">
-          כדי שזה יהיה “מסונכרן עם ה־SQL”: פשוט תוודאי שב־<span class="kbd">books.json</span>
-          שמורים אותם שדות כמו בטבלת <span class="kbd">Book</span> + מחיר מטבלת <span class="kbd">Product</span>.
+        <div class="small muted" style="margin-top:10px;">
+          הנתונים אמורים להיות מסונכרנים ל־SQL שלך כך:
+          <span class="pill">Book.product_id</span> +
+          <span class="pill">Book.title</span> +
+          <span class="pill">Book.number_of_pages</span> +
+          <span class="pill">Book.author_id</span> +
+          <span class="pill">Product.price</span>
         </div>
-      </aside>
+      </section>
     </div>
 
-    <!-- טבלה -->
-    <section class="card" style="margin-top:14px">
-      <h2>Books</h2>
-      <div class="small-note muted">טוען נתונים מ־<span class="kbd">books.json</span> שנמצא באותו ריפו.</div>
+    <section class="card" style="margin-top:14px;">
+      <h2 style="display:flex;justify-content:space-between;align-items:center;gap:10px;">
+        <span>Books</span>
+        <span class="muted small">טוען נתונים מ־ <span class="pill">books.json</span></span>
+      </h2>
 
-      <div style="margin-top:12px; overflow:auto;">
-        <table>
-          <thead>
-            <tr>
-              <th style="width:110px">product_id</th>
-              <th>title</th>
-              <th style="width:140px">pages</th>
-              <th style="width:140px">author_id</th>
-              <th style="width:120px">price</th>
-            </tr>
-          </thead>
-          <tbody id="tbodyEl">
-            <tr>
-              <td colspan="5" class="muted">אין נתונים עדיין.</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>product_id</th>
+            <th>title</th>
+            <th>pages</th>
+            <th>author_id</th>
+            <th>price</th>
+          </tr>
+        </thead>
+        <tbody id="tbody">
+          <tr><td colspan="5" class="muted">אין נתונים עדיין.</td></tr>
+        </tbody>
+      </table>
     </section>
 
-    <footer>
-      Library Database Project — Shira & Hodaya ©
-    </footer>
+    <div class="footer">© Library Database Project — Shira & Hodaya</div>
   </div>
 
   <script>
-    // מצפים לקובץ books.json עם רשומה בסגנון:
-    // [
-    //   {"product_id":1001,"title":"Introduction to Databases","number_of_pages":120,"author_id":"210000026","price":19.90},
-    //   ...
-    // ]
-
-    const loadBtn  = document.getElementById("loadBtn");
+    const loadBtn = document.getElementById("loadBtn");
+    const refreshBtn = document.getElementById("refreshBtn");
     const clearBtn = document.getElementById("clearBtn");
     const statusEl = document.getElementById("statusEl");
-    const tbodyEl  = document.getElementById("tbodyEl");
+    const tbody = document.getElementById("tbody");
     const searchEl = document.getElementById("searchEl");
-    const sortEl   = document.getElementById("sortEl");
+    const sortEl = document.getElementById("sortEl");
 
     let books = [];
 
-    function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, m => ({
-        "&":"&amp;", "<":"&lt;", ">":"&gt;", '"':"&quot;", "'":"&#39;"
-      }[m]));
+    function normalizeBook(x){
+      // תומך גם במבנים שונים ב-books.json
+      return {
+        product_id: Number(x.product_id ?? x.id ?? x.book_id ?? x.productId),
+        title: String(x.title ?? x.book_title ?? x.name ?? ""),
+        pages: Number(x.pages ?? x.number_of_pages ?? x.numberOfPages ?? 0),
+        author_id: String(x.author_id ?? x.authorId ?? x.author ?? ""),
+        price: Number(x.price ?? x.book_price ?? x.product_price ?? 0)
+      };
     }
 
-    function toNumber(x){
-      const n = Number(x);
-      return Number.isFinite(n) ? n : 0;
+    function escapeHtml(str){
+      return String(str).replace(/[&<>"']/g, (m) => ({
+        "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"
+      }[m]));
     }
 
     function render(list){
       if(!list.length){
-        tbodyEl.innerHTML = '<tr><td colspan="5" class="muted">אין תוצאות.</td></tr>';
+        tbody.innerHTML = `<tr><td colspan="5" class="muted">אין נתונים עדיין.</td></tr>`;
         return;
       }
-
-      tbodyEl.innerHTML = list.map(b => `
+      tbody.innerHTML = list.map(b => `
         <tr>
-          <td>${escapeHtml(b.product_id)}</td>
-          <td>${escapeHtml(b.title ?? "")}</td>
-          <td>${escapeHtml(b.number_of_pages ?? "")}</td>
-          <td>${escapeHtml(b.author_id ?? "")}</td>
-          <td>${escapeHtml((b.price ?? "").toString())}</td>
+          <td>${Number.isFinite(b.product_id) ? b.product_id : ""}</td>
+          <td>${escapeHtml(b.title)}</td>
+          <td>${Number.isFinite(b.pages) ? b.pages : ""}</td>
+          <td>${escapeHtml(b.author_id)}</td>
+          <td>${Number.isFinite(b.price) ? b.price.toFixed(2) : ""}</td>
         </tr>
       `).join("");
     }
 
     function applyFilters(){
       const q = searchEl.value.trim().toLowerCase();
-      let list = [...books];
+      let filtered = books.slice();
 
       if(q){
-        list = list.filter(b =>
-          String(b.product_id).toLowerCase().includes(q) ||
-          String(b.title ?? "").toLowerCase().includes(q)
+        filtered = filtered.filter(b =>
+          String(b.product_id).includes(q) ||
+          (b.title || "").toLowerCase().includes(q)
         );
       }
 
-      const s = sortEl.value;
-      list.sort((a,b)=>{
-        if(s==="id_asc")   return toNumber(a.product_id) - toNumber(b.product_id);
-        if(s==="id_desc")  return toNumber(b.product_id) - toNumber(a.product_id);
-        if(s==="title_asc")  return String(a.title??"").localeCompare(String(b.title??""));
-        if(s==="title_desc") return String(b.title??"").localeCompare(String(a.title??""));
-        if(s==="pages_desc") return toNumber(b.number_of_pages) - toNumber(a.number_of_pages);
-        if(s==="price_desc") return toNumber(b.price) - toNumber(a.price);
+      const sort = sortEl.value;
+      filtered.sort((a,b) => {
+        if(sort === "id_asc") return (a.product_id||0) - (b.product_id||0);
+        if(sort === "id_desc") return (b.product_id||0) - (a.product_id||0);
+        if(sort === "title_asc") return (a.title||"").localeCompare(b.title||"");
+        if(sort === "title_desc") return (b.title||"").localeCompare(a.title||"");
         return 0;
       });
 
-      render(list);
-      statusEl.textContent = `נטענו ${books.length} ספרים. מוצגים כעת: ${list.length}.`;
+      render(filtered);
+      statusEl.textContent = `מוצגים ${filtered.length} ספרים.`;
     }
 
-    loadBtn.addEventListener("click", async () => {
-      statusEl.textContent = "טוען books.json...";
+    async function loadData(){
+      statusEl.textContent = "טוען נתונים...";
       try{
-        const res = await fetch("books.json", { cache: "no-store" });
+        // cache bust כדי לראות עדכונים בגיטהאב
+        const res = await fetch("books.json?ts=" + Date.now(), { cache: "no-store" });
         if(!res.ok) throw new Error("HTTP " + res.status);
-        books = await res.json();
 
-        // אם במקרה השדות אצלך שונים, ננסה לתקן בעדינות:
-        books = books.map(b => ({
-          product_id: b.product_id ?? b.id ?? b.book_id,
-          title: b.title ?? b.name,
-          number_of_pages: b.number_of_pages ?? b.pages,
-          author_id: b.author_id ?? b.author,
-          price: b.price ?? b.book_price
-        }));
+        const raw = await res.json();
+        const arr = Array.isArray(raw) ? raw : (raw.books || raw.data || []);
+        books = arr.map(normalizeBook).filter(b => Number.isFinite(b.product_id) && b.title);
 
+        if(!books.length){
+          statusEl.textContent = "נטען books.json אבל לא נמצאו ספרים (בדקי את מבנה ה-JSON).";
+        }else{
+          statusEl.textContent = `נטענו ${books.length} ספרים.`;
+        }
         applyFilters();
       }catch(e){
         console.error(e);
-        books = [];
+        statusEl.textContent = "שגיאה בטעינת books.json (בדקי שהקובץ קיים באותו ריפו ושיש בו JSON תקין).";
         render([]);
-        statusEl.textContent = "שגיאה: לא הצלחנו לקרוא את books.json. בדקי שהוא נמצא באותה תיקייה ושמו נכון.";
       }
-    });
+    }
+
+    loadBtn.addEventListener("click", loadData);
+    refreshBtn.addEventListener("click", loadData);
 
     clearBtn.addEventListener("click", () => {
       books = [];
       searchEl.value = "";
-      tbodyEl.innerHTML = '<tr><td colspan="5" class="muted">אין נתונים עדיין.</td></tr>';
-      statusEl.textContent = "נוקה. לחצי “רשימת ספרים” כדי לטעון נתונים.";
+      sortEl.value = "id_asc";
+      statusEl.textContent = "נוקה. לחצי “רשימת ספרים” כדי לטעון שוב.";
+      render([]);
     });
 
-    searchEl.addEventListener("input", () => applyFilters());
-    sortEl.addEventListener("change", () => applyFilters());
+    searchEl.addEventListener("input", applyFilters);
+    sortEl.addEventListener("change", applyFilters);
   </script>
 </body>
 </html>
